--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -7,6 +7,7 @@
   color: inherit;
   text-decoration: none;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 html {
